[package]
name = "battle-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.24"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
sunless-dawn-character = { git = "ssh://git@git.aspireranch.com/sunless-dawn/sunless-dawn-character.git", branch = "main" }
