[package]
name = "battle-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
bytestring = "1.3.0"
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0"
futures = "0.3.27"
log = "0.4.17"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
sunless-dawn-character = { git = "ssh://git@git.aspireranch.com/sunless-dawn/sunless-dawn-character.git", branch = "main" }
